parslers-benchmark/src/tests/invalid/syntaxErr/if/ifNofi.wacc
# if missing closing fi

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  then
    skip
  else
    skip
end
